--- a/.github/workflows/test-python-and-angular.yml
+++ b/.github/workflows/test-python-and-angular.yml
@@ -48,7 +48,7 @@ jobs:
         run: |
           . "$GITHUB_WORKSPACE"/venv/bin/activate
           uv sync
-          uv pip install -r pyproject.toml --extra dev
+          uv pip install -r pyproject.toml --all-extras
           uv pip install .
           uv pip install pytest
         working-directory: backend
