--- a/.github/workflows/test-python-and-angular.yml
+++ b/.github/workflows/test-python-and-angular.yml
@@ -47,10 +47,8 @@ jobs:
       - name: Python dependencies and package install
         run: |
           . "$GITHUB_WORKSPACE"/venv/bin/activate
-          uv sync
-          uv pip install -r pyproject.toml --all-extras
+          uv pip install -r "requirements.txt" -r "requirements-dev.txt"
           uv pip install .
-          uv pip install pytest
         working-directory: backend
 
       - name: Database setup
