--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,38 +1,20 @@
+[build-system]
+requires = ["hatchling", "hatch-requirements-txt"]
+build-backend = "hatchling.build"
+
 [project]
 name = "app"
 version = "0.1.0"
 description = "Enterprise Analytics Platform Backend"
 authors = [{ name = "Architect", email = "architect@example.com" }]
 requires-python = ">=3.12"
-dependencies = [
-    "alembic>=1.13.1",
-    "asyncpg>=0.29.0",
-    "duckdb>=0.10.0",
-    "fastapi>=0.109.0",
-    "httpx>=0.26.0",
-    "mpax>=0.2.4",
-    "passlib[argon2]>=1.7.4",
-    "pydantic-settings>=2.1.0",
-    "pydantic[email]>=2.6.0",
-    "python-jose[cryptography]>=3.3.0",
-    "python-multipart>=0.0.9",
-    "sqlalchemy[asyncio]>=2.0.25",
-    "sqlglot>=28.6.0",
-    "uvicorn[standard]>=0.27.0",
-]
+dynamic = ["dependencies"]
 
-[dependency-groups]
-dev = [
-    "black>=24.1.0",
-    "isort>=5.13.0",
-    "pytest-asyncio>=0.23.0",
-    "pytest>=8.0.0",
-    "respx>=0.22.0",
-]
+[tool.hatch.metadata.hooks.requirements_txt]
+files = ["requirements.txt"]
 
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+[tool.hatch.metadata.hooks.requirements_txt.optional-dependencies]
+dev = ["requirements-dev.txt"]
 
 [tool.ruff]
 exclude = [
