--- a/pulse-query-ng-web/package.json
+++ b/pulse-query-ng-web/package.json
@@ -7,7 +7,9 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve:ssr:pulse-query-ng-web": "node dist/pulse-query-ng-web/server/server.mjs"
+    "serve:ssr:pulse-query-ng-web": "node dist/pulse-query-ng-web/server/server.mjs",
+    "e2e": "playwright test",
+    "e2e:ui": "playwright test --ui"
   },
   "prettier": {
     "printWidth": 100,
@@ -39,6 +41,7 @@
     "@codemirror/state": "^6.5.4",
     "@codemirror/theme-one-dark": "^6.1.3",
     "@codemirror/view": "^6.39.11",
+    "@material/material-color-utilities": "^0.4.0",
     "codemirror": "^6.0.2",
     "express": "^5.1.0",
     "rxjs": "~7.8.0",
@@ -49,6 +52,8 @@
     "@angular/cli": "^21.1.0",
     "@angular/compiler-cli": "^21.1.0",
     "@angular/platform-browser-dynamic": "^21.1.0",
+    "@axe-core/playwright": "^4.11.0",
+    "@playwright/test": "^1.57.0",
     "@types/express": "^5.0.1",
     "@types/node": "^20.17.19",
     "jsdom": "^27.1.0",
