--- a/pulse-query-ng-web/package.json
+++ b/pulse-query-ng-web/package.json
@@ -47,6 +47,7 @@
     "@material/material-color-utilities": "^0.4.0",
     "codemirror": "^6.0.2",
     "express": "^5.1.0",
+    "prettier": "^3.8.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
