Improve Material usage and prepare for new adhoc query interface integration into dashboard + fixing the adhoc model selector

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -1,44 +1,21 @@
-services:
-  # Application Database (Users, Dashboards, Widget Configs)
-  db:
+services: 
+  # Application Database
+  db: 
     image: postgres:18-alpine
     restart: always
-    environment:
+    environment: 
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=app_db
-    expose:
-      - "5432"
-    ports:
-      - "5433:5432"
-#    network_mode: host
-#    volumes:
-#      - postgres_data:/var/lib/postgresql/data
-#    networks:
-#      - analytics_net
+      - POSTGRES_DB=pulse_query_db
+    expose: 
+      - "5432" 
+    ports: 
+      - "5433:5432" 
 
-  # Optional: Adminer for easy DB inspection
-#  adminer:
- #   image: adminer
-#    restart: always
-#    ports:
-#      - "8080:8080"
-#    depends_on:
-#      - db
-#    networks:
-#      - analytics_net
-
-  # Placeholder for future LLM Service (e.g., vLLM)
-  # Keeping the volume definition here ensures we have a dedicated spot for weights
-  # llm-service:
-  #   image: vllm/vllm-openai
-  #   volumes:
-  #     - llm_models:/root/.cache/huggingface
-
-#volumes:
-#  postgres_data:
-#  llm_models:
-
-#networks:
-#  analytics_net:
-#    driver: bridge
+  # Backend Service (Optional if running via 'uv', but mandatory for full stack compose)
+  # Un-commenting this structure for reference on connecting to Ollama
+  # backend: 
+  #   build: .
+  #   extra_hosts:
+  #     - "host.docker.internal:host-gateway" 
+  #   env_file: .env
