--- a/.github/workflows/test-python-and-angular.yml
+++ b/.github/workflows/test-python-and-angular.yml
@@ -16,7 +16,7 @@ jobs:
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
-          POSTGRES_DB: app_db
+          POSTGRES_DB: pulse_query_db
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
