--- a/.github/workflows/test-python-and-angular.yml
+++ b/.github/workflows/test-python-and-angular.yml
@@ -32,13 +32,13 @@ jobs:
         uses: actions/setup-node@v6
         with:
           node-version: lts/*
-          cache: 'npm'
+          cache: "npm"
           cache-dependency-path: ./pulse-query-ng-web/package-lock.json
 
       - name: Install uv
         uses: astral-sh/setup-uv@v7
         with:
-          python-version: '3.12'
+          python-version: "3.12"
           enable-cache: true
 
       - name: Python venv setup
